--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "socket.io": "^4.7.4",
+    "websocket": "^1.0.34",
     "ws": "^8.16.0"
   }
 }
